--- a/src/Filtre.css
+++ b/src/Filtre.css
@@ -1,13 +1,19 @@
 .Filtre {
-    
+   
     background-color:white;
 }
-@media (max-width:420px) {
+@media (max-width:768px) {
     .Filtre{
         visibility: hidden;
+    }
+}
+@media (max-width:1024px) {
+    .Filtre{
+        border: right 10px;
+
     }
 }
 .FiltreMobile {
     position: relative;
     z-index: 1;
-}
+} 
